objects/Consultant__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Apex(Oracle)</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Javascript</fullName>
                </value>
                <value>
                    <fullName>PL/SQL</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>.Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consultants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Consultant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Consultant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>